syntax = "proto3";

option csharp_namespace = "Hyacinth.GrpcDemo.UserServer";

package user;

// 服务定义
service User {
  rpc FindUser (UserRequest) returns (UserReply);
}

message UserRequest {
  int32 Id = 1;
}

message UserReply {
  UserModel user = 1;
  message UserModel{
		int32 Id = 1;
		string name = 2;
		string account = 3;
		string password = 4;
  }
}
